--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
             </div>
       <p>
-      <span style="font-weight: bold;">S<i style="font-size: x-small;">ft</i>G</span> stimulates youth to be action-oriented by not only developing their ability to formulate effective solutions to problems, but also providing them with financial support and mentorship.<br> In all our programs, Youth voices take front and center position and we work directly with young people to elevate their stories.<br> In our capacity strengthening of community systems, we highlight young people’s assets and emphasize the need to create safe spaces where young people learn from one another while developing healthy relationships with supportive adults.<br>
+      <span style="font-weight: bold;">S<i style="font-size: x-small;">ft</i>G</span> stimulates youth to be action-oriented by not only developing their ability to formulate effective solutions to societal problems, but also providing them with mentorship and financial support to implement these solutions.<br> In all our programs, Youth voices take front and center position and we work directly with young people to elevate their stories.<br> In our capacity strengthening of community systems, we highlight young people’s assets and emphasize the need to create safe spaces where young people learn from one another while developing healthy relationships with supportive adults.<br>
       Our mission is fulfilled when youth come to realize that there is enhancement in their abilities to control, influence or cope with their socio-economic roles in society.
     </p>
         </div>
