--- a/projects.html
+++ b/projects.html
@@ -153,7 +153,7 @@
                         <li><a href="#"><i class="fa-sharp fa-solid fa-children"></i> "A shared future" </a></li>
                      </ul>
                      <p style="padding-bottom: 30px;" class="excert">
-                         Signals from the Grassroots creates youth-driven projects that empower future leaders to drive meaningful change. Our initiatives serve as catalysts, nurturing the potential within young minds and fostering their commitment to address pressing issues within their communities.
+                         Signals from the Grassroots creates youth-driven projects that empower future leaders to drive meaningful change. Our initiatives serve as catalysts, nurturing the potential within young minds and fostering their commitment to addressing pressing issues within their communities.
                      </p>
     
                     <div class="section_title text-center" id="trees">
