--- a/projects.html
+++ b/projects.html
@@ -188,7 +188,7 @@
                             <div class="blog_details" style="padding-top: 30px">
                                 <h3>Project Summary:</h3>
                                  <p>
-                                     In response to these challenges, this project aims to address the alarming dropout rates among female students in Uganda’s rural areas as a result of period poverty, and the staunch stigma surrounding menstruation in these communities.<br>
+                                     This project aims at addressing the alarming dropout rates among female students in Uganda’s rural areas as a result of period poverty, and the staunch stigma surrounding menstruation in these communities.<br>
                                      The two-pronged approach involves creating reusable sanitary pads, bundling them with anti-bacterial wash, and distributing them among 1000 school girls, each receiving 2 pads and an anti-bacterial soap, in 3 schools across 2 of Uganda’s most rural and poorest districts; Kiboga,
                                  </p>
                                  <h3>Implementation:</h3>
