--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 </p>
                 <p class="kwer"></p>
                 <p style="text-align: center;">
-                    Lack of opportunities for youth is high, but there is certainly no lack of need in community. <span style="font-weight: bold;">Signals from the Grassroots</span> connects the dots by placing young people where they are needed the most.
+                    Lack of opportunities for youth is high, but there is certainly no lack of need in community. <span style="font-weight: bold;">Signals from the Grassroots</span> connects the dots; places young people where they are needed the most.
                 </p>
             </div>
 
