--- a/initiative.html
+++ b/initiative.html
@@ -236,7 +236,7 @@
                   </div>
                   <div class="col-12">
                     <div class="donate_now_btn text-center">
-                        <a style="margin-bottom: 4px;" href="https://youtube.com/@janice_nkajja" target="_blank" class="boxed-btn4">Check it out on Youtube</a>
+                        <a style="margin-bottom: 4px;" href="https://www.youtube.com/@janiceonthemic" target="_blank" class="boxed-btn4">Check it out on Youtube</a>
                         <a href="https://anchor.fm/janice-nkajja" target="_blank" class="boxed-btn4">Check it out on Spotify</a>
                     </div>
                 </div>
