--- a/projects.html
+++ b/projects.html
@@ -463,7 +463,7 @@
  
                                 <h3>Impact</h3>
                                  <p>
-                                     'Dialogue For The Future' stimulated more than 90% of of our 4,000 members to take on actions at an individual stage by establishing their own initiatives to solve the most pressing problems in their communities. They have further embarked on volunteering and internships to actively engage in bettering their communities. This highlights the tangible shifts in behaviors that SftG is facilitating among young people.  
+                                     'Dialogue For The Future' stimulated more than 90% of our 4,000 members to take on actions at an individual stage by establishing their own initiatives to solve the most pressing problems in their communities. They have further embarked on volunteering and internships to actively engage in bettering their communities. This highlights the tangible shifts in behaviors that SftG is facilitating among young people.  
                                  </p>
                                 <div class="row">
                                    <div class="col-12">
