--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                                       </div>
                                 </div>
                                 <div class="balance d-flex justify-content-between align-items-center">
-                                    <i>Hong Kong, Asia</i>
+                                    <i>Thailand, Asia</i>
                                 </div>
                                 <h4><span style="font-weight: bold;">S<i style="font-size: x-small;">ft</i>G</span> Named to Forbes 30 under 30</h4>
                                 <p><span style="font-weight: bold;">S<i style="font-size: x-small;">ft</i>G</span> is proud to announce that it has been named to the prestigious Forbes 30 Under 30 list.</p>
