--- a/team.html
+++ b/team.html
@@ -1202,7 +1202,7 @@
                         <div class="volenteer_thumb buddy">
                            <img src="img/volenteer/nyariak-mariano.jpg" alt="Nyariak Mariano">
                           <h4 class="westt">Nyariak Mariano</h4>
-                          <p class="westt">Nationality: Sudan</p>  
+                          <p class="westt">Nationality: South Sudan</p>  
                         </div>
                     </div>
                 </div>
