--- a/team.html
+++ b/team.html
@@ -1409,7 +1409,7 @@
                         <div class="volenteer_thumb buddy">
                             <img src="img/volenteer/chidiebube-nwankwo.jpg" alt="Chidiebube Nwankwo">
                           <h4 class="westt">Chidiebube Nwankwo</h4>
-                          <p class="westt">Nationality: Kenya</p>                            
+                          <p class="westt">Nationality: Nigeria</p>                            
                         </div>
                     </div>
                 </div>
