--- a/team.html
+++ b/team.html
@@ -1495,7 +1495,7 @@
                 <div class="col-zg-4 col-md-6 skills">
                     <div class="single_volenteer">
                         <div class="volenteer_thumb buddy">
-                            <img src="img/volenteer/signals-from-the-grassroots-z.png.jpg" alt="">
+                            <img src="img/volenteer/signals-from-the-grassroots-z.png" alt="">
                           <h4 class="westt">Nambwayo Racheal</h4>
                           <p class="westt">Nationality: Kenya</p>
                         </div>
