--- a/initiative.html
+++ b/initiative.html
@@ -215,7 +215,7 @@
                   </div>
                   <div class="col-12">
                     <div class="donate_now_btn text-center">
-                        <a href="https://bit.ly/AlfaDeep" target="_blank" class="boxed-btn4">Visit AlfaDeep's website</a>
+                        <a href="https://clammy-newt-56c.notion.site/AlfaDeep-Maximizing-energy-efficiency-and-sustainability-with-AI-953b134576cb4377a9d4b2d45250864d" target="_blank" class="boxed-btn4">Visit AlfaDeep's website</a>
                     </div>
                 </div>
 
